--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-texto HTML
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Primera página de prueba con Git</title>
+</head>
+<body>
+
+</body>
+</html>
